--- a/Tricorder/res/xml/preferences.xml
+++ b/Tricorder/res/xml/preferences.xml
@@ -41,6 +41,15 @@
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/prefs_cat_display">
+                                                      
+        <ListPreference
+                android:key="unitsMode"
+                android:title="@string/prefs_units"
+                android:summary="@string/prefs_units_summary"
+                android:entries="@array/prefs_units_entries"
+                android:entryValues="@array/prefs_units_values"
+                android:dialogTitle="@string/prefs_units_title"
+                android:defaultValue="SI" />
                            
         <ListPreference
                 android:key="orientationMode"
