--- a/Dazzle/res/xml/dazzle_meta.xml
+++ b/Dazzle/res/xml/dazzle_meta.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="60dp"
-    android:minHeight="30dp"
+    android:minWidth="72dp"
+    android:minHeight="72dp"
     android:updatePeriodMillis="86400000"
-    android:initialLayout="@layout/appwidget_provider"
-    android:configure="org.hermit.dazzle.ExampleAppWidgetConfigure"
+    android:initialLayout="@layout/dazzle_1_1"
+    android:configure="org.hermit.dazzle.DazzleConfigure"
     >
     
 </appwidget-provider>
