--- a/Dazzle/res/xml/dazzle_meta.xml
+++ b/Dazzle/res/xml/dazzle_meta.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="72dp"
-    android:minHeight="72dp"
-    android:updatePeriodMillis="86400000"
-    android:initialLayout="@layout/dazzle_1_1"
-    android:configure="org.hermit.dazzle.DazzleConfigure"
-    >
+    	android:minWidth="72dp"
+    	android:minHeight="72dp"
+    	android:updatePeriodMillis="10000"
+    	android:initialLayout="@layout/dazzle_1_1" >
     
 </appwidget-provider>
+
+<!-- WARNING: HYPER-FAST UPDATES IN THIS VERSION!!!!! -->
 
 <!-- 86400000 is the value of AlarmManager.INTERVAL_DAY - or once per day. -->
 
