Test Card: layout.

--- a/Test Card/res/values/arrays.xml
+++ b/Test Card/res/values/arrays.xml
@@ -37,7 +37,7 @@ for example, shows a significant difference in the display quality.</item>
 <item>The display shows test patterns which are intended to let you see
 the structure of individual pixels, and the effect that has on the
 overall quality of the display.  Four main types of patterns are shown,
-in a range of colours; the colours are labelled with their initial letters,
+in a range of colours; the colours are labeled with their initial letters,
 \"B\" being blue and \"K\" being black\n\
 \n\
 Two types of single-colour patterns are shown: dots and lines.  They are
