--- a/Dazzle/res/layout/preferences.xml
+++ b/Dazzle/res/layout/preferences.xml
@@ -86,6 +86,30 @@
 					android:text="@string/prefs_gps_summary" />
 		</LinearLayout>
 	</LinearLayout>
+
+	<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal" >
+		<CheckBox android:id="@id/dazzle_airplane"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="top" />
+		<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical" >
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/prefs_enable_airplane"
+					android:textSize="20sp" />
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/prefs_airplane_summary" />
+		</LinearLayout>
+	</LinearLayout>
 	
 	<LinearLayout
 			android:layout_width="fill_parent"
