--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -3,8 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/dazzle_button"
 		android:layout_width="fill_parent"
+		android:layout_height="72dp"
 		android:orientation="horizontal"
-		android:background="@drawable/appwidget_bg" android:layout_height="72dp">
+		android:background="@drawable/appwidget_bg" >
 
 	<LinearLayout android:id="@+id/dazzle_wifi"
 			android:orientation="vertical"
@@ -21,7 +22,7 @@
 		<ImageView android:id="@+id/wifi_ind"
 				android:layout_width="wrap_content"
 				android:src="@drawable/red"
-				android:layout_gravity="center" android:layout_height="20dp"/>
+				android:layout_gravity="center" android:layout_height="16dp"/>
 
 	</LinearLayout>
 
@@ -40,7 +41,7 @@
 		<ImageView android:id="@+id/bluetooth_ind"
 				android:layout_width="wrap_content"
 				android:src="@drawable/red"
-				android:layout_gravity="center" android:layout_height="20dp"/>
+				android:layout_gravity="center" android:layout_height="16dp"/>
 
 	</LinearLayout>
 
@@ -73,7 +74,7 @@
 		<ImageView android:id="@+id/airplane_ind"
 				android:layout_width="wrap_content"
 				android:src="@drawable/red"
-				android:layout_gravity="center" android:layout_height="20dp"/>
+				android:layout_gravity="center" android:layout_height="16dp"/>
 
 	</LinearLayout>
 
@@ -94,7 +95,7 @@
 				android:layout_gravity="center"
 				android:text="Dazzle"
 				android:textStyle="bold"
-				android:layout_height="20dp"/>
+				android:layout_height="16dp"/>
 
 	</LinearLayout>
 
@@ -115,7 +116,7 @@
 				android:layout_gravity="center"
 				android:text="Dazzle"
 				android:textStyle="bold"
-				android:layout_height="20dp"/>
+				android:layout_height="16dp"/>
 
 	</LinearLayout>
 
