Dazzle: added ringer.

--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -78,6 +78,25 @@
 
 	</LinearLayout>
 
+	<LinearLayout android:id="@+id/dazzle_ringer"
+			android:orientation="vertical"
+			android:layout_gravity="top|center_horizontal"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1" >
+
+		<ImageView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ringer"
+				android:layout_gravity="center"/>
+
+		<ImageView android:id="@+id/ringer_ind"
+				android:layout_width="wrap_content"
+				android:src="@drawable/red"
+				android:layout_gravity="center" android:layout_height="16dp"/>
+
+	</LinearLayout>
+
 	<LinearLayout android:id="@+id/dazzle_brightness"
 			android:orientation="vertical"
 			android:layout_gravity="top|center_horizontal"
