Dazzle: improved ringer.

--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -7,6 +7,27 @@
 		android:orientation="horizontal"
 		android:background="@drawable/appwidget_bg" >
 
+	<LinearLayout android:id="@+id/dazzle_ringer"
+			android:orientation="vertical"
+			android:layout_gravity="top|center_horizontal"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1" >
+
+		<ImageView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ringer"
+				android:layout_gravity="center"/>
+
+		<TextView android:id="@+id/ringer_ind"
+				android:layout_width="wrap_content"
+				android:layout_gravity="center"
+				android:text="Dazzle"
+				android:textStyle="bold"
+				android:layout_height="16dp"/>
+
+	</LinearLayout>
+
 	<LinearLayout android:id="@+id/dazzle_wifi"
 			android:orientation="vertical"
 			android:layout_gravity="top|center_horizontal"
@@ -72,25 +93,6 @@
 				android:layout_gravity="center"/>
 
 		<ImageView android:id="@+id/airplane_ind"
-				android:layout_width="wrap_content"
-				android:src="@drawable/red"
-				android:layout_gravity="center" android:layout_height="16dp"/>
-
-	</LinearLayout>
-
-	<LinearLayout android:id="@+id/dazzle_ringer"
-			android:orientation="vertical"
-			android:layout_gravity="top|center_horizontal"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_weight="1" >
-
-		<ImageView android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:src="@drawable/ringer"
-				android:layout_gravity="center"/>
-
-		<ImageView android:id="@+id/ringer_ind"
 				android:layout_width="wrap_content"
 				android:src="@drawable/red"
 				android:layout_gravity="center" android:layout_height="16dp"/>
