--- a/Dazzle/res/layout/ringer_activity.xml
+++ b/Dazzle/res/layout/ringer_activity.xml
@@ -8,24 +8,30 @@
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:orientation="horizontal">
 
-		<ToggleButton android:id="@+id/button_on"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="0.25"
-				android:textOff="@string/ringer_on"
-				android:textOn="@string/ringer_on" />
-		<ToggleButton android:id="@+id/button_vibe"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="0.25"
-				android:textOff="@string/ringer_vibe"
-				android:textOn="@string/ringer_vibe" />
 		<ToggleButton android:id="@+id/button_silent"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:layout_weight="0.25"
 				android:textOff="@string/ringer_silent"
 				android:textOn="@string/ringer_silent" />
+		<ToggleButton android:id="@+id/button_vibe"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.25"
+				android:textOff="@string/ringer_vibe"
+				android:textOn="@string/ringer_vibe" />
+		<ToggleButton android:id="@+id/button_on"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.25"
+				android:textOff="@string/ringer_on"
+				android:textOn="@string/ringer_on" />
+		<ToggleButton android:id="@+id/button_max"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.25"
+				android:textOff="@string/ringer_max"
+				android:textOn="@string/ringer_max" />
 
 	</LinearLayout>
 
