--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -19,12 +19,10 @@
 				android:src="@drawable/ringer"
 				android:layout_gravity="center"/>
 
-		<TextView android:id="@+id/ringer_ind"
+		<ImageView android:id="@+id/ringer_ind"
 				android:layout_width="wrap_content"
-				android:layout_gravity="center"
-				android:text="Dazzle"
-				android:textStyle="bold"
-				android:layout_height="16dp"/>
+				android:src="@drawable/red"
+				android:layout_gravity="center" android:layout_height="16dp"/>
 
 	</LinearLayout>
 
