Dazzle: added sync.

--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -97,6 +97,25 @@
 
 	</LinearLayout>
 
+	<LinearLayout android:id="@id/dazzle_sync"
+			android:orientation="vertical"
+			android:layout_gravity="top|center_horizontal"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1" >
+
+		<ImageView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/sync"
+				android:layout_gravity="center"/>
+
+		<ImageView android:id="@+id/sync_ind"
+				android:layout_width="wrap_content"
+				android:src="@drawable/red"
+				android:layout_gravity="center" android:layout_height="16dp"/>
+
+	</LinearLayout>
+
 	<LinearLayout android:id="@id/dazzle_brightness"
 			android:orientation="vertical"
 			android:layout_gravity="top|center_horizontal"
